# ChangeLog for sys-process/itop
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  06 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
  sys-process/itop: Add github to remote-id in metadata.xml

*itop-0.1 (03 Jul 2013)

  03 Jul 2013; Justin Lecher <jlec@gentoo.org> +itop-0.1.ebuild,
  itop-9999.ebuild, metadata.xml:
  Bump to EAPI=5; add ordinary release

  01 Jul 2012; Justin Lecher <jlec@gentoo.org> itop-9999.ebuild:
  Fix license to MIT

*itop-9999 (30 Jun 2012)

  30 Jun 2012; Justin Lecher <jlec@gentoo.org> +itop-9999.ebuild,
  +metadata.xml:
  Add live version, still wrong license,
  https://github.com/kargig/itop/issues/1