@@ -2,6 +2,10 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  16 Aug 2015; Johann Schmitz <ercpe@gentoo.org> itop-0.1.ebuild,
+  itop-9999.ebuild:
+  sys-process/itop: Updated ebuild headers to match new $Id$ line
+
   06 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
   sys-process/itop: Add github to remote-id in metadata.xml
 
